# ZSChallenge

./: .gitignore  README.md  docker-compose.yml
api/: .env  .env.docker  .env.local  .gitignore  Cargo.toml  Dockerfile
api/migrations/2022-09-01-140012_create_accounts/: up.sql
api/migrations/2022-09-04-114715_create_bankdetails/: down.sql  up.sql
api/migrations/2022-09-04-114724_create_cardetails/: down.sql  up.sql
api/src/: accounts.rs  auth.rs  bankdetails.rs  cardetails.rs  main.rs  models.rs  schema.rs
