[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Jan-Phil Wagner <janphil.wagner@gmail.com>"]

[dependencies]
rocket = "0.5.0-rc.2"
diesel = { version = "2.0.0", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]
