[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Jan-Phil Wagner <janphil.wagner@gmail.com>"]

[dependencies]
chrono = {version="0.4.0", features=["serde"]}
uuid = { version="0.8.2", features =["serde", "v4"]}
diesel = { version = "2.0.0", features = ["chrono", "postgres", "uuid"] }
rocket = "0.4.11"
dotenvy = "0.15.3"
rocket_contrib = "0.4.11"
serde = { version="1.0.144", features = ["derive"]}